set(SOURCES
    CBotCallMethode.cpp
    CBotClass.cpp
    CBotCStack.cpp
    CBotDebug.cpp
    CBotDefParam.cpp
    CBotExternalCall.cpp
    CBotFileUtils.cpp
    CBotProgram.cpp
    CBotStack.cpp
    CBotToken.cpp
    CBotTypResult.cpp
    CBotUtils.cpp
    CBotInstr/CBotBlock.cpp
    CBotInstr/CBotBoolExpr.cpp
    CBotInstr/CBotBreak.cpp
    CBotInstr/CBotCase.cpp
    CBotInstr/CBotCatch.cpp
    CBotInstr/CBotCondition.cpp
    CBotInstr/CBotDefArray.cpp
    CBotInstr/CBotDefBoolean.cpp
    CBotInstr/CBotDefClass.cpp
    CBotInstr/CBotDefFloat.cpp
    CBotInstr/CBotDefInt.cpp
    CBotInstr/CBotDefString.cpp
    CBotInstr/CBotDo.cpp
    CBotInstr/CBotEmpty.cpp
    CBotInstr/CBotExpression.cpp
    CBotInstr/CBotExprLitBool.cpp
    CBotInstr/CBotExprLitNan.cpp
    CBotInstr/CBotExprLitNull.cpp
    CBotInstr/CBotExprLitNum.cpp
    CBotInstr/CBotExprLitString.cpp
    CBotInstr/CBotExprUnaire.cpp
    CBotInstr/CBotExprVar.cpp
    CBotInstr/CBotFieldExpr.cpp
    CBotInstr/CBotFor.cpp
    CBotInstr/CBotFunction.cpp
    CBotInstr/CBotIf.cpp
    CBotInstr/CBotIndexExpr.cpp
    CBotInstr/CBotInstrCall.cpp
    CBotInstr/CBotInstr.cpp
    CBotInstr/CBotInstrMethode.cpp
    CBotInstr/CBotInstrUtils.cpp
    CBotInstr/CBotLeftExpr.cpp
    CBotInstr/CBotLeftExprVar.cpp
    CBotInstr/CBotListArray.cpp
    CBotInstr/CBotListExpression.cpp
    CBotInstr/CBotListInstr.cpp
    CBotInstr/CBotLogicExpr.cpp
    CBotInstr/CBotNew.cpp
    CBotInstr/CBotParExpr.cpp
    CBotInstr/CBotPostIncExpr.cpp
    CBotInstr/CBotPreIncExpr.cpp
    CBotInstr/CBotReturn.cpp
    CBotInstr/CBotSwitch.cpp
    CBotInstr/CBotThrow.cpp
    CBotInstr/CBotTry.cpp
    CBotInstr/CBotTwoOpExpr.cpp
    CBotInstr/CBotWhile.cpp
    CBotVar/CBotVarArray.cpp
    CBotVar/CBotVarBoolean.cpp
    CBotVar/CBotVarClass.cpp
    CBotVar/CBotVar.cpp
    CBotVar/CBotVarFloat.cpp
    CBotVar/CBotVarInt.cpp
    CBotVar/CBotVarPointer.cpp
    CBotVar/CBotVarString.cpp
    stdlib/Compilation.cpp
    stdlib/FileFunctions.cpp
    stdlib/MathFunctions.cpp
    stdlib/StringFunctions.cpp
)

set (HEADERS
    CBot.h
    CBotCallMethode.h
    CBotClass.h
    CBotCStack.h
    CBotDebug.h
    CBotDefines.h
    CBotDefParam.h
    CBotEnums.h
    CBotExternalCall.h
    CBotFileUtils.h
    CBotProgram.h
    CBotStack.h
    CBotToken.h
    CBotTypResult.h
    CBotUtils.h
    CBotInstr/CBotBlock.h
    CBotInstr/CBotBoolExpr.h
    CBotInstr/CBotBreak.h
    CBotInstr/CBotCase.h
    CBotInstr/CBotCatch.h
    CBotInstr/CBotCondition.h
    CBotInstr/CBotDefArray.h
    CBotInstr/CBotDefBoolean.h
    CBotInstr/CBotDefClass.h
    CBotInstr/CBotDefFloat.h
    CBotInstr/CBotDefInt.h
    CBotInstr/CBotDefString.h
    CBotInstr/CBotDo.h
    CBotInstr/CBotEmpty.h
    CBotInstr/CBotExpression.h
    CBotInstr/CBotExprLitBool.h
    CBotInstr/CBotExprLitNan.h
    CBotInstr/CBotExprLitNull.h
    CBotInstr/CBotExprLitNum.h
    CBotInstr/CBotExprLitString.h
    CBotInstr/CBotExprUnaire.h
    CBotInstr/CBotExprVar.h
    CBotInstr/CBotFieldExpr.h
    CBotInstr/CBotFor.h
    CBotInstr/CBotFunction.h
    CBotInstr/CBotIf.h
    CBotInstr/CBotIndexExpr.h
    CBotInstr/CBotInstrCall.h
    CBotInstr/CBotInstr.h
    CBotInstr/CBotInstrMethode.h
    CBotInstr/CBotInstrUtils.h
    CBotInstr/CBotLeftExpr.h
    CBotInstr/CBotLeftExprVar.h
    CBotInstr/CBotListArray.h
    CBotInstr/CBotListExpression.h
    CBotInstr/CBotListInstr.h
    CBotInstr/CBotLogicExpr.h
    CBotInstr/CBotNew.h
    CBotInstr/CBotParExpr.h
    CBotInstr/CBotPostIncExpr.h
    CBotInstr/CBotPreIncExpr.h
    CBotInstr/CBotReturn.h
    CBotInstr/CBotSwitch.h
    CBotInstr/CBotThrow.h
    CBotInstr/CBotTry.h
    CBotInstr/CBotTwoOpExpr.h
    CBotInstr/CBotWhile.h
    CBotVar/CBotVarArray.h
    CBotVar/CBotVarBoolean.h
    CBotVar/CBotVarClass.h
    CBotVar/CBotVar.h
    CBotVar/CBotVarFloat.h
    CBotVar/CBotVarInt.h
    CBotVar/CBotVarPointer.h
    CBotVar/CBotVarString.h
    stdlib/Compilation.h
    stdlib/stdlib.h
    stdlib/stdlib_public.h
)

# Includes
set(LOCAL_INCLUDES
    ${CMAKE_CURRENT_SOURCE_DIR}/..
)

include_directories(${LOCAL_INCLUDES})


if(CBOT_STATIC)
    add_library(CBot STATIC ${SOURCES} ${HEADERS})
else()
    add_library(CBot SHARED ${SOURCES} ${HEADERS})
    install(TARGETS CBot LIBRARY
            DESTINATION ${COLOBOT_INSTALL_LIB_DIR}
            ARCHIVE DESTINATION ${COLOBOT_INSTALL_LIB_DIR}
            RUNTIME DESTINATION ${COLOBOT_INSTALL_BIN_DIR})
endif()

group_sources("${SOURCES}" "Source Files")
group_sources("${HEADERS}" "Header Files")
